--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dom-to-image": "^2.6.0",
     "embla-carousel-react": "^8.5.2",
     "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "react": "^18.2.0",
