--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "clsx": "^2.1.1",
     "dom-to-image": "^2.6.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.23.26",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.479.0",
+    "motion": "^12.23.26",
     "next": "16.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-timer-hook": "^4.0.1",
+    "react-use-measure": "^2.1.7",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
